@@ -1,9 +1,8 @@
 #!/bin/sh
 ##
-##    Davit - An affiliate affadavit management system.
-##    by Fred Gleason <fredg@paravelsystems.com>
+##    (C) Copyright 2002-2003 Fred Gleason <fredg@paravelsystems.com>
 ##
-##      $Id: autogen.sh,v 1.2 2007/11/19 16:53:27 fredg Exp $
+##      $Id: autogen.sh,v 1.5 2010/07/29 19:32:30 cvs Exp $
 ##
 ##    Adapted from './autogen.sh' in the Jack Audio Connection Kit.
 ##    Copyright (C) 2001-2003 Paul Davis, et al.
@@ -23,7 +22,12 @@
 ##    Boston, MA  02111-1307  USA
 ##
 
-libtoolize --force 2>&1 | sed '/^You should/d' || {
+libtoolize=libtoolize
+if which glibtoolize > /dev/null 2>&1; then
+      libtoolize=glibtoolize
+fi
+
+$libtoolize --force 2>&1 | sed '/^You should/d' || {
     echo "libtool failed, exiting..."
     exit 1
 }
@@ -33,7 +37,7 @@ aclocal $ACLOCAL_FLAGS || {
     exit 1
 }
 
-automake --add-missing || {
+automake --add-missing -Wno-portability || {
     echo "automake --add-missing failed, exiting..."
     exit 1
 }
